# nsa_flow

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.agents/: AGENTS.md
docs/: index.html  nsa_flow.html  search.js
nsa_flow/: __init__.py  core.py  energy.py  flow.py  layers.py  legacy.py  nsaf_layer.py  optimizer.py  retraction.py  utils.py
nsa_flow.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: compare_nsa_flows.py  demonstrate_layers.py  test_nonneg_ortho.py
tests/: basic_nsa_test.py  benchmark_retractions.py  conftest.py  debug.py  run_nsa_flow_tests.py  test_convergence_flow.py  test_energy_behavior.py  test_nsa_autograd.py  test_nsa_flow_core_relocated.py  test_nsa_flow_extended.py  test_nsa_flow_opt.py  test_nsa_flow_parameters.py  test_nsaf_conv2d.py  test_nsaf_layer.py  test_nsaf_linear.py
