[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsa_flow"
version = "0.2.0"
description = "Non-negative Stiefel Approximating Flow for interpretable representation learning"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "B. Avants", email = "stnava@example.com" }
]
dependencies = [
  "torch>=2.0",
  "numpy>=1.23",
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/stnava/nsa_flow"
Repository = "https://github.com/stnava/nsa_flow"



